# CE1106_T04

./: .gitignore  LICENSE  readme.md
Configuration/: Comments.txt  Project.txt
Source/: computer_vison.py
Source/Client/: CMakeLists.txt  CMakeLists.txt~  NEWMAIN.C  conandata.yml  connection.c  connection.h  game.c  game.h  gameState.json  game_status.c  game_status.c~  game_status.h  main.c  main.c~  main_con_gui_(depreciate).c  mensaje.c  screen_handler.h~  settings.ini  settings.ini~  snapcraft.yaml  spectator.c  spectator.h
Source/Client/comunicaciones/: comServer.c  comServer.c~  comServer.h  jsonProcessor.c  jsonProcessor.h  socketServer.c  socketServer.c~  socketServer.h
Source/Client/comunicaciones/ESP32_Controller/: websocket_client.c  websocket_client.h  websocket_controller.py
Source/Client/configuracion/: configuracion.c  configuracion.h
Source/Client/game/: collision_handler.c  collision_handler.c~  collision_handler.h  game_logic.c  game_logic.c~  game_logic.h  game_screen.c  game_screen.c~  game_screen.h  game_server.c  game_server.h  powerHandler.c  powerHandler.h  spectator.c  spectator.c~  spectator.h
Source/Client/game/Objects/: ball.c  ball.h  brick.c  brick.h  player.c  player.h
Source/Client/gui/: camera.c  camera.h  main_menu.c  main_menu.h  nameInput.c  nameInput.h  screenHandler.c  screenHandler.c~  screenHandler.h
Source/Client/logs/: saveLog.c  saveLog.h
Source/Client/runner/: settings.ini
Source/Código_Arduino/: ESP32_Mando.ino
Source/Código_Arduino/ESP32_Mando/: ESP32_Mando.ino
Source/Server/: pom.xml  settings.ini
Source/Server/src/main/java/org/proyectosce/: Command.java  Main.java  Server.java  SettingsReader.java
Source/Server/src/main/java/org/proyectosce/comandos/: Command.java  CommandHandler.java  DisconnectCommand.java  GameSpectatorCommand.java  HolaCommand.java  PowerCommand.java  SendGameStateCommand.java  TipoClienteCommand.java
Source/Server/src/main/java/org/proyectosce/comandos/factory/: CommandFactory.java
Source/Server/src/main/java/org/proyectosce/comandos/factory/products/: Command.java  DisconnectCommand.java  GameSpectatorCommand.java  GameStateCommand.java  HolaCommand.java  NewConnectionCommand.java  ObserverCommand.java  PlayerCommand.java  PowerCommand.java  SendGameStateCommand.java  TipoClienteCommand.java
Source/Server/src/main/java/org/proyectosce/comunicaciones/: ClientHandler.java  Cliente.java  ComServer.java  JsonProcessor.java  SocketServer.java
Source/Server/src/main/java/org/proyectosce/factory/: PowerFactory.java
Source/Server/src/main/java/org/proyectosce/factory/powers/: AddBallPower.java  AddLifePower.java  DoubleRacketPower.java  HalfRacketPower.java  Power.java  SpeedDownPower.java  SpeedUpPower.java
Source/Server/src/main/java/org/proyectosce/game_objects/: Brick.java  Player.java  Vector2.java
Source/Server/src/main/java/org/proyectosce/ui/: ClientListPanel.java  MainWindow.java
Source/Server/src/test/java/org/proyectosce/: MainTest.java
Source/Server/src/test/java/org/proyectosce/comunicaciones/: ClienteTest.java  JsonProcessorTest.java
Source/untitled/: main.cpp
Test/: AB105.md  cliente.py  cliente_specy.py  cliente_status.py  server.py
